# jesper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
data/: AAPL.csv  META.csv  NVDA.csv
data/fundamentalData/: A.csv  AAL.csv  AAP.csv  AAPL.csv  ABBV.csv  ABC.csv  ABMD.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALK.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  ANSS.csv  AON.csv  AOS.csv  (+462 more)
jesper/: eval_sheet.py  savings.py  valuation.py
jesper/scraper/: __init__.py  chrome_user_agents.py  roic.py  scraper.py  stocks.py  user_agents.py  yahoo_finance.py
jesper/sql/: __init__.py  db_tables.py  env.py  pd_to_sql.py
jesper/utils/: __init__.py  misc.py  raw.py  style.py  vis.py
jesper/value/: value_summary.py
numerai/scripts/: main.py
numerai/utils/: utils.py
results/: iv_sp500.csv  iv_sp500_0_100.csv  iv_sp500_0_80.csv  iv_sp500_100_125.csv
scripts/: main.py
server/: README.md  app.py  example.env  requirements.txt
server/api/: api.py
server/api/stocks/: routes.py
server/db/: sql_tables.py
src/: valuation.py
src/data/: raw.py
src/model/pool/: regr.py
src/scraper/: scraper.py  utils.py  yahoo_finance.py
src/utils/: __init__.py  raw.py  utils.py
tests/: test_raw.py  test_scraper.py
