[tool.poetry]
name = "jesper"
version = "0.1.0"
description = ""
authors = ["Daniel Illner <daniel.illner@outlook.de>"]
packages = [
    { include = "src" },
]
include = [
    "src",
    "*.md",
    "*.sh"
]

[tool.poetry.dependencies]
python = "^3.8"
numerapi = "^2.11.0"
pandas = "^1.4.2"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
